[gd_scene load_steps=15 format=3 uid="uid://duhqsh5l5bbtm"]

[ext_resource type="Script" uid="uid://udmhyux244sf" path="res://scenes/menus/title/Menu.gd" id="1_eg0nr"]
[ext_resource type="Material" uid="uid://dlwbyy60pp0e2" path="res://assets/shaders/TitleScreenShaderMaterial.tres" id="2_f6nud"]
[ext_resource type="Script" uid="uid://cgjlvgqqa7l8f" path="res://classes/AnimatedSprite.gd" id="2_rhavx"]
[ext_resource type="SpriteFrames" uid="uid://xmmicsrmtycf" path="res://assets/images/titlescreen/gfDanceTitle.res" id="2_u0gnt"]
[ext_resource type="SpriteFrames" path="res://assets/images/titlescreen/logoBumpin.res" id="4_dmwg3"]
[ext_resource type="SpriteFrames" uid="uid://6vecp03qpxmj" path="res://assets/images/titlescreen/titleEnter.res" id="5_0ol1a"]
[ext_resource type="PackedScene" uid="uid://bgilym2qsrs4y" path="res://scenes/fonts/Alphabet.tscn" id="6_8oxyx"]

[sub_resource type="Gradient" id="Gradient_c5lki"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xdgb1"]
gradient = SubResource("Gradient_c5lki")
width = 1280
height = 720
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="Animation" id="Animation_ldyfc"]
resource_name = "danceLeft"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../BG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.219608, 0.254902, 0.733333, 1), Color(0.219608, 0.254902, 0.733333, 0)]
}

[sub_resource type="Animation" id="Animation_n5wdf"]
resource_name = "danceLeft_noFL"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../BG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.219608, 0.254902, 0.733333, 0)]
}

[sub_resource type="Animation" id="Animation_mht0r"]
resource_name = "danceRight"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 29]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../BG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.625),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.247059, 0.67451, 1), Color(1, 0.247059, 0.67451, 0)]
}

[sub_resource type="Animation" id="Animation_sca7u"]
resource_name = "danceRight_noFL"
length = 0.625004
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"gfDance"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 29]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../BG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.247059, 0.67451, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2p0c"]
_data = {
&"danceLeft": SubResource("Animation_ldyfc"),
&"danceLeft_noFL": SubResource("Animation_n5wdf"),
&"danceRight": SubResource("Animation_mht0r"),
&"danceRight_noFL": SubResource("Animation_sca7u")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_eg0nr")

[node name="BG" type="Sprite2D" parent="."]
modulate = Color(0.219608, 0.254902, 0.733333, 1)
position = Vector2(640, 360)
texture = SubResource("GradientTexture2D_xdgb1")

[node name="TitleGroup" type="Node2D" parent="."]
visible = false

[node name="gf" type="AnimatedSprite2D" parent="TitleGroup"]
material = ExtResource("2_f6nud")
position = Vector2(880, 400)
sprite_frames = ExtResource("2_u0gnt")
animation = &"gfDance"
frame = 29
frame_progress = 1.0
script = ExtResource("2_rhavx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleGroup/gf"]
libraries = {
&"": SubResource("AnimationLibrary_j2p0c")
}

[node name="logo" type="AnimatedSprite2D" parent="TitleGroup"]
position = Vector2(356, 256)
sprite_frames = ExtResource("4_dmwg3")
animation = &"logo bumpin"
script = ExtResource("2_rhavx")

[node name="titleEnter" type="AnimatedSprite2D" parent="TitleGroup"]
material = ExtResource("2_f6nud")
position = Vector2(100, 612)
sprite_frames = ExtResource("5_0ol1a")
animation = &"Press Enter to Begin"
centered = false
script = ExtResource("2_rhavx")

[node name="TextTemplate" parent="." instance=ExtResource("6_8oxyx")]
offset_top = 200.0
offset_bottom = 270.0

[node name="TextGroup" type="Node2D" parent="."]

[node name="Flash" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1280.0
offset_bottom = 720.0
